--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "toc_visible": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -72,10 +71,12 @@
         "# Add your code here\n",
         "#\n",
         "\n",
+        "# comment\n",
+        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
