Checking if google colab pushes can be pulled

--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -71,8 +71,6 @@
         "# Add your code here\n",
         "#\n",
         "\n",
-        "# comment\n",
-        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -106,7 +104,9 @@
         "#\n",
         "# Add your code here\n",
         "#\n",
-        "\n"
+        "\n",
+        "\n",
+        "# NEW COMMENT\n"
       ],
       "execution_count": null,
       "outputs": []
