Double Output Fixed

--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -74,7 +74,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "  plt.axis\n",
         "  plt.xlabel(f'Age: {age[rand[i]]}, Gender: {gender[rand[i]]}')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,9 +198,10 @@
       "metadata": {
         "id": "mGOkUt8_Uu8q",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 384
         },
-        "outputId": "8e474ef6-994f-49b4-b095-bbab2112934f"
+        "outputId": "5f115b01-5c30-499d-a989-e73ca137b48f"
       },
       "source": [
         "import os\n",
@@ -270,15 +271,30 @@
         "    # add occlusion techniques (blackout, random brightness, and blur)\n",
         "])"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Number of images for training: 4000\n",
             "Number of images for validation: 1000\n",
             "load all image data, age and gender labels...\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-d77ec6ac159d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;31m# load data from the training set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m \u001b[0mtrain_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_age\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_gender\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_imgs_lables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolder_train_val\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_image_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;31m# load data from the validation set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-5-d77ec6ac159d>\u001b[0m in \u001b[0;36mload_imgs_lables\u001b[0;34m(dataset_path, filenames)\u001b[0m\n\u001b[1;32m     29\u001b[0m   \u001b[0mgender_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mcurrent_file_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfilenames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrent_file_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m255.0\u001b[0m  \u001b[0;31m# Normalize pixel values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurrent_file_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
@@ -367,16 +383,24 @@
         "])\n",
         "\n",
         "inputs = Input(shape = (128,128,3))\n",
-        "feature_layers = before_fully_conncected(train_images)\n",
-        "age = layers.Dense(1, activation='linear')(feature_layers)\n",
-        "gender = layers.Dense(1, activation='sigmoid')(feature_layers)\n",
+        "feature_layers = before_fully_conncected(inputs)\n",
+        "gender = layers.Dense(1, activation='sigmoid', name = 'gender')(feature_layers)\n",
+        "age = layers.Dense(1, activation='linear', name = 'age')(feature_layers)\n",
+        "\n",
+        "\n",
+        "\n",
+        "inputs = Input(shape = (128,128,3))\n",
+        "feature_layers = before_fully_conncected(inputs)\n",
+        "gender = layers.Dense(1, activation='sigmoid', name = 'gender')(feature_layers)\n",
+        "age = layers.Dense(1, activation='linear', name = 'age')(feature_layers)\n",
+        "\n",
         "\n",
         "\n",
         "before_fully_conncected .summary()\n",
         "from tensorflow.keras.utils import plot_model\n",
         "plot_model(before_fully_conncected , show_shapes=True,dpi=100)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -419,21 +443,19 @@
       "source": [
         "#\n",
         "# Add your code here\n",
-        "#\n",
-        "model = Model(inputs = inputs, outputs = [age, gender])\n",
-        "model.compile(optimizer='adam', loss={'age' : 'mse', 'gender_output' : 'binary_crossentropy'}, metrics={'age': 'mae', 'gender_output': 'accuracy'})\n",
+        "model = Model(inputs = [inputs], outputs = [gender, age])\n",
+        "model.compile(optimizer='adam', loss={'gender':'binary_crossentropy', 'age' :'mae'}, metrics={'gender':'accuracy', 'age' :'mae'})\n",
         "\n",
         "# Train the model\n",
         "history = model.fit(\n",
-        "    train_images, train_age,\n",
-        "    validation_data=(val_images, val_age),\n",
+        "    x = train_images, y=[train_gender, train_age],\n",
+        "    validation_data=(val_images, [val_gender, val_age]),\n",
         "    epochs=3,\n",
         "    batch_size=32\n",
         ")\n",
-        "\n",
         "###modelA.save(folder_models+'age_gender_A.keras')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
