--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -377,22 +377,16 @@
         "    layers.Conv2D(128, (3,3), activation='relu'),\n",
         "    layers.MaxPooling2D((2, 2)),\n",
         "    layers.Flatten(),\n",
-        "    layers.Dense(64, activation='relu'),\n",
-        "    layers.Dropout(0.5),\n",
-        "    layers.BatchNormalization(),\n",
+        "    layers.Dense(64, activation='relu')\n",
         "])\n",
         "\n",
         "inputs = Input(shape = (128,128,3))\n",
         "feature_layers = before_fully_conncected(inputs)\n",
-        "gender = layers.Dense(1, activation='sigmoid', name = 'gender')(feature_layers)\n",
-        "age = layers.Dense(1, activation='linear', name = 'age')(feature_layers)\n",
-        "\n",
-        "\n",
-        "\n",
-        "inputs = Input(shape = (128,128,3))\n",
-        "feature_layers = before_fully_conncected(inputs)\n",
-        "gender = layers.Dense(1, activation='sigmoid', name = 'gender')(feature_layers)\n",
-        "age = layers.Dense(1, activation='linear', name = 'age')(feature_layers)\n",
+        "feature_layers_2 = layers.Dense(128, activation='relu')(feature_layers)\n",
+        "dropout_Layer1 = layers.Dropout(0.5)(feature_layers_2)\n",
+        "# batch_layer = layers.BatchNormalization()\n",
+        "gender = layers.Dense(1, activation='sigmoid', name = 'gender')(dropout_Layer1)\n",
+        "age = layers.Dense(1, activation='linear', name = 'age')(dropout_Layer1)\n",
         "\n",
         "\n",
         "\n",
