Second Model Started

--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "XCwBWDsMQwyb",
         "outputId": "2278bff6-6e80-4a5f-d572-a8e9498aaddf",
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "3zA1kSeoReXJ",
         "outputId": "4d63de4f-dedc-4b85-b115-d90fead2a512",
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "mGOkUt8_Uu8q",
         "outputId": "690f8905-47da-4ca0-e9d5-04ad576da88d",
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "KwM8BqKV0PSS",
         "outputId": "dd6d745a-ca85-4771-edc7-114d91e24f6e",
@@ -323,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "metadata": {
         "id": "atYurdRBU64d",
         "colab": {
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
         "id": "A7rWAbMoVPMw",
         "colab": {
@@ -785,7 +785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "metadata": {
         "id": "TiB-nV--0PSS",
         "outputId": "5ce5c3b6-eebc-4ed3-ea23-4a04b0b6a51e",
@@ -838,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "metadata": {
         "id": "1pl5bSA5VT3Y",
         "colab": {
@@ -934,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "0twFrc4jVi2E",
         "colab": {
@@ -992,9 +992,98 @@
         "#\n",
         "# Add your code here\n",
         "#\n",
+        "#\n",
+        "# Add your code here\n",
+        "#\n",
+        "import keras.utils\n",
+        "from keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization,Activation, GlobalAveragePooling2D\n",
+        "from keras.models import Model\n",
+        "from keras.regularizers import l2\n",
+        "from keras.optimizers import Adam\n",
+        "from keras.callbacks import LearningRateScheduler\n",
+        "from keras.applications import VGG16\n",
         "\n",
-        "modelB.save(your_model_folder+\"age_gender_B.keras\")"
+        "conv_base = VGG16(weights='imagenet', include_top=False, input_shape=(128, 128, 3))\n",
+        "conv_base.trainable = False\n",
+        "for layer in conv_base.layers[-10:]:\n",
+        "    layer.trainable = True\n",
+        "input_shape=(128, 128, 3)\n",
+        "inputs = Input(shape=input_shape)\n",
+        "input_augment = data_augmentation(inputs)\n",
+        "shared_layers = conv_base(input_augment)\n",
+        "\n",
+        "# gender_flatten = GlobalAveragePooling2D()(shared_layers)\n",
+        "\n",
+        "#gender_flatten = Flatten()(conv_base.output)\n",
+        "\n",
+        "l2_val = 0.01\n",
+        "# gender = layers.Conv2D(16, (3, 3), use_bias=False, kernel_regularizer=l2(l2_val), input_shape=input_shape, strides=1, padding = 'same')(shared_layers)\n",
+        "# gender = layers.BatchNormalization()(gender)\n",
+        "# gender = layers.Activation('relu')(gender)\n",
+        "# gender = layers.MaxPooling2D((2, 2))(gender)\n",
+        "\n",
+        "# gender = layers.Conv2D(32, (3, 3), use_bias=False, kernel_regularizer=l2(l2_val), input_shape=input_shape, strides=1, padding = 'same', ac)(shared_layers)\n",
+        "# gender = layers.BatchNormalization()(gender)\n",
+        "# gender = layers.Activation('relu')(gender)\n",
+        "# gender = layers.MaxPooling2D((2, 2))(gender)\n",
+        "\n",
+        "# gender = layers.Conv2D(64, (3, 3), use_bias=False, kernel_regularizer=l2(l2_val), input_shape=input_shape, strides=1, padding = 'same')(gender)\n",
+        "# gender = layers.BatchNormalization()(gender)\n",
+        "# gender = layers.Activation('relu')(gender)\n",
+        "# gender = layers.MaxPooling2D((2, 2))(gender)\n",
+        "\n",
+        "gender_flatten = layers.GlobalAveragePooling2D()(shared_layers)\n",
+        "gender = Dense(32, use_bias=False, kernel_regularizer=l2(0.01), activation = 'relu')(gender_flatten)\n",
+        "gender = BatchNormalization()(gender)\n",
+        "gender = Activation('relu')(gender)\n",
+        "gender = Dropout(0.2)(gender)\n",
+        "\n",
+        "gender = Dense(256, use_bias=False, kernel_regularizer=l2(0.01))(gender)\n",
+        "gender = BatchNormalization()(gender)\n",
+        "gender = Activation('relu')(gender)\n",
+        "gender = Dropout(0.2)(gender)\n",
+        "\n",
+        "# gender = Dense(512, use_bias=False, kernel_regularizer=l2(0.01))(gender)\n",
+        "# gender = BatchNormalization()(gender)\n",
+        "# gender = Activation('relu')(gender)\n",
+        "# gender = Dropout(0.2)(gender)\n",
+        "gender_output = Dense(1, activation='sigmoid', name='gender')(gender)\n",
+        "\n",
+        "age = layers.GlobalAveragePooling2D()(shared_layers)\n",
+        "\n",
+        "age = Dense(512, use_bias=False, kernel_regularizer=l2(0.01))(age)\n",
+        "age1 = BatchNormalization()(age)\n",
+        "age2 = Activation('relu')(age1)\n",
+        "\n",
+        "age3 = Dense(128, use_bias=False, kernel_regularizer=l2(0.01))(age2)\n",
+        "age4 = BatchNormalization()(age3)\n",
+        "age5 = Activation('relu')(age4)\n",
+        "\n",
+        "age6 = Dropout(0.4)(age5)\n",
+        "age_output = Dense(1, activation='relu', name='age')(age6)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# create the model\n",
+        "modelB = Model(inputs=inputs, outputs=[gender_output, age_output])\n",
+        "\n",
+        "# compile the model\n",
+        "modelB.summary()\n",
+        "from tensorflow.keras.utils import plot_model\n",
+        "plot_model(modelB, show_shapes=True,dpi=100)\n",
+        "# modelB.summary()\n",
+        "# from tensorflow.keras.utils import plot_model\n",
+        "# plot_model(modelB, show_shapes=True,dpi=100)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h1PGwZwLkHTa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1020,7 +1109,43 @@
       "source": [
         "#\n",
         "# Add your code here\n",
-        "#\n"
+        "#\n",
+        "\n",
+        "#\n",
+        "# Add your code here\n",
+        "#\n",
+        "from keras.callbacks import EarlyStopping, LearningRateScheduler\n",
+        "\n",
+        "# define the learning rate scheduler\n",
+        "# def scheduler(epoch, lr):\n",
+        "#   if epoch < 10:\n",
+        "#     return lr\n",
+        "#   else:\n",
+        "#     return lr * np.exp(-0.1*epoch)\n",
+        "\n",
+        "opt = keras.optimizers.Adam(learning_rate=0.0001)\n",
+        "\n",
+        "# learning_rate_scheduler = LearningRateScheduler(scheduler)\n",
+        "\n",
+        "# define the early stopping criteria\n",
+        "early_stop = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
+        "\n",
+        "# compile the model\n",
+        "# modelA.compile(optimizer='adam', loss={'gender': 'binary_crossentropy', 'age': 'mae'}, metrics={'gender': 'accuracy','age': 'mae'})\n",
+        "modelB.compile(optimizer = opt,loss={'gender': 'binary_crossentropy', 'age': 'mae'}, metrics={'gender': 'accuracy','age': 'mae'})\n",
+        "\n",
+        "# train the model\n",
+        "h = modelB.fit(\n",
+        "    x=train_images,\n",
+        "    y=[train_gender, train_age],\n",
+        "    validation_data=(val_images, [val_gender, val_age]),\n",
+        "    batch_size=32,\n",
+        "    epochs=30,\n",
+        "    callbacks=[early_stop]\n",
+        "    #callbacks=[learning_rate_scheduler, early_stop],\n",
+        "    )\n",
+        "\n",
+        "# modelA.save(folder_models+'age_gender_A.keras')\n"
       ]
     },
     {
