--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -961,6 +961,53 @@
         "# Add your code here\n",
         "#\n",
         "\n",
+        "# Add your code here\n",
+        "#\n",
+        "import keras.utils\n",
+        "from keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization,Activation, GlobalAveragePooling2D\n",
+        "from keras.models import Model\n",
+        "from keras.regularizers import l2\n",
+        "from keras.optimizers import Adam\n",
+        "from keras.callbacks import LearningRateScheduler\n",
+        "from keras.applications import VGG16, MobileNetV2\n",
+        "from keras.applications.xception import Xception\n",
+        "from keras.applications.vgg16 import preprocess_input\n",
+        "\n",
+        "# Load base VGG16 model\n",
+        "base_model = VGG16(weights='imagenet', include_top=False, input_shape=(128, 128, 3))\n",
+        "\n",
+        "# Freeze convolutional base\n",
+        "base_model.trainable = False\n",
+        "\n",
+        "# Create input layer\n",
+        "inputs = Input(shape=(128, 128, 3))\n",
+        "\n",
+        "# Apply augmentation only to training data\n",
+        "x = data_augmentation(inputs)  # <-- Apply augmentation here\n",
+        "\n",
+        "# Feed augmented images into VGG16\n",
+        "# x = preprocess_input(x)  # <-- Normalize for VGG16\n",
+        "x = base_model(x, training=False)  # Keep VGG16 frozen\n",
+        "x = Flatten()(x)\n",
+        "\n",
+        "# Add classification layers\n",
+        "x = Dense(128, activation='relu')(x)\n",
+        "x = Dense(256, activation='relu')(x)\n",
+        "x = Dense(64, activation='relu')(x)\n",
+        "gender_output = Dense(1, activation='sigmoid', name='gender')(x)\n",
+        "age_output = Dense(1, activation='relu', name='age')(x)\n",
+        "\n",
+        "# Define model\n",
+        "modelB = Model(inputs=inputs, outputs=[gender_output, age_output])\n",
+        "\n",
+        "# compile the model\n",
+        "modelB.summary()\n",
+        "from tensorflow.keras.utils import plot_model\n",
+        "plot_model(modelB, show_shapes=True,dpi=100)\n",
+        "# modelB.summary()\n",
+        "# from tensorflow.keras.utils import plot_model\n",
+        "# plot_model(modelB, show_shapes=True,dpi=100)\n",
+        "\n",
         "modelB.summary()\n",
         "from tensorflow.keras.utils import plot_model\n",
         "plot_model(modelB, show_shapes=True,dpi=100)"
