--- a/age_gender_submit.ipynb
+++ b/age_gender_submit.ipynb
@@ -956,7 +956,7 @@
         "ax4.grid(True)\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()\n"
+        "plt.show()"
       ]
     },
     {
